v1.1.0/modules/schema/pages/class/CRRSegment.adoc
= `CRRSegment`
:toclevels: 4


+++CRRSegment represents a segment of a CRR in a particular time frame. 

The segment class contains amount, clearing price, start date and time, end date and time.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:CRRSegment`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`CRRSegment`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<CongestionRevenueRight,`CongestionRevenueRight`>>
//| [[slots_table.CongestionRevenueRight]]<<CongestionRevenueRight,`CongestionRevenueRight`>>
| 1 +
xref::class/CongestionRevenueRight.adoc[`CongestionRevenueRight`]
| _n/a_
| _n/a_

| <<Sink,`Sink`>>
//| [[slots_table.Sink]]<<Sink,`Sink`>>
| 0..* +
xref::class/Pnode.adoc[`Pnode`]
| _n/a_
| _n/a_

| <<Source,`Source`>>
//| [[slots_table.Source]]<<Source,`Source`>>
| 0..* +
xref::class/Pnode.adoc[`Pnode`]
| _n/a_
| _n/a_

| <<amount,`amount`>>
//| [[slots_table.amount]]<<amount,`amount`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Dollar amount = quantity x clearingPrice+++
| _n/a_

| <<clearingPrice,`clearingPrice`>>
//| [[slots_table.clearingPrice]]<<clearingPrice,`clearingPrice`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Clearing price of a CRR+++
| _n/a_

| <<endDateTime,`endDateTime`>>
//| [[slots_table.endDateTime]]<<endDateTime,`endDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++segment end date time+++
| _n/a_

| <<quantity,`quantity`>>
//| [[slots_table.quantity]]<<quantity,`quantity`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++The MW amount associated with the CRR+++
| _n/a_

| <<startDateTime,`startDateTime`>>
//| [[slots_table.startDateTime]]<<startDateTime,`startDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++segment start date time+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#amount]
=== `amount`
+++Dollar amount = quantity x clearingPrice+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CRRSegment.amount`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.amount,&#10548;>>
--
////


//[discrete]
[#clearingPrice]
=== `clearingPrice`
+++Clearing price of a CRR+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CRRSegment.clearingPrice`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.clearingPrice,&#10548;>>
--
////


//[discrete]
[#CongestionRevenueRight]
=== `CongestionRevenueRight`



[cols="h,4",width=65%]
|===
| URI
| `cim:CRRSegment.CongestionRevenueRight`
| Cardinality
| 1
| Type
| xref::class/CongestionRevenueRight.adoc[`CongestionRevenueRight`]


|===

////
[.text-left]
--
<<slots_table.CongestionRevenueRight,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#endDateTime]
=== `endDateTime`
+++segment end date time+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CRRSegment.endDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.endDateTime,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#quantity]
=== `quantity`
+++The MW amount associated with the CRR+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CRRSegment.quantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.quantity,&#10548;>>
--
////


//[discrete]
[#Sink]
=== `Sink`



[cols="h,4",width=65%]
|===
| URI
| `cim:CRRSegment.Sink`
| Cardinality
| 0..*
| Type
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.Sink,&#10548;>>
--
////


//[discrete]
[#Source]
=== `Source`



[cols="h,4",width=65%]
|===
| URI
| `cim:CRRSegment.Source`
| Cardinality
| 0..*
| Type
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.Source,&#10548;>>
--
////


//[discrete]
[#startDateTime]
=== `startDateTime`
+++segment start date time+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CRRSegment.startDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.startDateTime,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/CongestionRevenueRight.adoc[`CongestionRevenueRight`] | xref::class/CongestionRevenueRight.adoc#CRRSegment[`CRRSegment`]



| xref::class/Pnode.adoc[`Pnode`] | xref::class/Pnode.adoc#SourceCRRSegment[`SourceCRRSegment`]


|===

